cmake_minimum_required ( VERSION 3.23 )
project ( allocator )
set ( CMAKE_CXX_STANDARD 20 )
add_executable ( allocator main.cpp allocator.h container.h )
option ( WITH_TESTS "Build the project with tests" ON )
if ( WITH_TESTS )
    add_executable ( test_allocator test.cpp allocator.h doctest.h container.h )
    enable_testing ()
    add_test ( allocator test_allocator )
endif ()